# course_work

./: CMakeLists.txt  README.md
doc/: Doxyfile
doc/latex/: annotated.tex  class_user.tex
doc/rtf/: refman.rtf
final_version/transport_services/: CMakeLists.txt  admin.cpp  admin.h  admin.ui  login.cpp  login.h  login.ui  signup.cpp  signup.h  signup.ui  sqlitedb.db  user.cpp  user.h  user.ui
final_version/transport_services/_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
final_version/transport_services/_build/.cmake/api/v1/reply/: cache-v2-8d71ec10a926f0e23dbc.json  cmakeFiles-v1-e5dab83b7d23b8ceaa11.json  codemodel-v2-64413e8b1ca6dd894663.json  index-2021-05-15T07-40-40-0092.json  target-transport_services-Debug-df488c1f6e3f95362b5c.json  target-transport_services_autogen-Debug-21bc51b3554549de4cf6.json  target-transport_services_autogen_timestamp_deps-Debug-7ba34e706001fa2234b7.json
final_version/transport_services/_build/transport_services_autogen/: deps  mocs_compilation.cpp
final_version/transport_services/_build/transport_services_autogen/EWIEGA46WW/: moc_admin.cpp  moc_admin.cpp.d  moc_login.cpp  moc_login.cpp.d  moc_signup.cpp  moc_signup.cpp.d  moc_user.cpp  moc_user.cpp.d
final_version/transport_services/_build/transport_services_autogen/include/: ui_admin.h  ui_login.h  ui_signup.h  ui_user.h
final_version/transport_services/db/: sqlitedb.db
final_version/transport_services/doc/: Doxyfile
final_version/transport_services/doc/html/: __build_2transport__services__autogen_2include_2ui__admin_8h_source.html  __build_2transport__services__autogen_2include_2ui__login_8h_source.html  __build_2transport__services__autogen_2include_2ui__signup_8h_source.html  __build_2transport__services__autogen_2include_2ui__user_8h_source.html  admin_8h_source.html  annotated.html  build_2src_2transport__services__autogen_2include___debug_2ui__admin_8h_source.html  build_2src_2transport__services__autogen_2include___debug_2ui__login_8h_source.html  build_2src_2transport__services__autogen_2include___debug_2ui__signup_8h_source.html  build_2src_2transport__services__autogen_2include___debug_2ui__user_8h_source.html  build_2src_2transport__services__autogen_2include___release_2ui__admin_8h_source.html  build_2src_2transport__services__autogen_2include___release_2ui__login_8h_source.html  build_2src_2transport__services__autogen_2include___release_2ui__signup_8h_source.html  build_2src_2transport__services__autogen_2include___release_2ui__user_8h_source.html  class_admin-members.html  class_admin.html  class_login-members.html  class_login.html  class_sign_up-members.html  class_sign_up.html  class_ui_1_1_admin-members.html  class_ui_1_1_admin.html  class_ui_1_1_login-members.html  class_ui_1_1_login.html  class_ui_1_1_sign_up-members.html  class_ui_1_1_sign_up.html  class_ui_1_1_user-members.html  class_ui_1_1_user.html  class_ui___admin-members.html  class_ui___admin.html  class_ui___login-members.html  class_ui___login.html  class_ui___sign_up-members.html  class_ui___sign_up.html  class_ui___user-members.html  class_ui___user.html  class_user-members.html  class_user.html  classes.html  dir_025589f341b10b3f19942013a20ee783.html  (+34 more)
final_version/transport_services/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
final_version/transport_services/doc/latex/: class_admin.tex  class_login.tex  class_sign_up.eps  class_sign_up.tex  class_ui_1_1_admin.eps  class_ui_1_1_admin.tex  class_ui_1_1_login.eps  class_ui_1_1_login.tex  class_ui_1_1_sign_up.eps  class_ui_1_1_sign_up.tex  class_ui_1_1_user.eps  class_ui_1_1_user.tex  class_ui___admin.eps  class_ui___admin.tex  class_ui___login.eps  class_ui___login.tex  class_ui___sign_up.eps  class_ui___sign_up.tex  class_ui___user.eps  class_ui___user.tex  class_user.eps  class_user.tex  hierarchy.tex  refman.tex  structqt__meta__stringdata___admin__t.tex  structqt__meta__stringdata___login__t.tex  structqt__meta__stringdata___sign_up__t.tex  structqt__meta__stringdata___user__t.tex
final_version/transport_services/doc/rtf/: refman.rtf
final_version/transport_services/src/: CMakeLists.txt  admin.cpp  admin.h  admin.ui  login.cpp  login.h  login.ui  signup.h  signup.ui  user.cpp  user.h  user.ui
sqlite/sqlitedb/: CMakeLists.txt  db.cpp  db.h  login.cpp  login.h  login.ui  operator.cpp  operator.h  operator.ui  signup.cpp  signup.h  signup.ui  user_main.cpp  user_main.h  user_main.ui
sqlite/sqlitedb/_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
sqlite/sqlitedb/_build/.cmake/api/v1/reply/: cache-v2-4569e757a0345375dfbf.json  cmakeFiles-v1-d2a22161af61205f8eb1.json  codemodel-v2-5a0726b781024ba0c456.json  index-2021-04-13T17-36-32-0135.json  target-sqlitedb-Debug-f0973a54c557a3a2c3df.json  target-sqlitedb_autogen-Debug-01811094f0c5a2244641.json  target-sqlitedb_autogen_timestamp_deps-Debug-fa5437a82e9126093f92.json
sqlite/sqlitedb/_build/sqlitedb_autogen/: deps  mocs_compilation.cpp
sqlite/sqlitedb/_build/sqlitedb_autogen/EWIEGA46WW/: moc_login.cpp  moc_login.cpp.d  moc_signup.cpp  moc_signup.cpp.d
sqlite/sqlitedb/_build/sqlitedb_autogen/include/: ui_login.h  ui_signup.h
src/: admin.cpp  admin.ui  login.h  login.ui  user.h  user.ui
